[package]
name = "holobios"
version = "0.1.0"
edition = "2024"

[dependencies.bevy]
version = "0.16.0"
# default-features = false
features = [
    "wayland",
    # "bevy_render", # GPU support (based on `wgpu`)
    # "bevy_sprite", # Only 2D not 3D
    # "bevy_camera",
] 

# [dependencies.bevy_render]
# version = "0.16.0"
