[package]
name = "holobios"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.1"

[dependencies.bevy]
version = "0.16.0"
# default-features = false
features = [
    # "bevy_render", # GPU support (based on `wgpu`)
    # "bevy_sprite", # Only 2D not 3D
    # "bevy_camera",
] 

[features]
wayland = ["bevy/wayland"]
